# monitoring-service-discovery

./: Makefile  README.md  manifest_template.yml  monitoring-service-discovery.yaml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  pr-lint.yaml  sbom.yml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
proxies/live/apiproxy/: msd.xml
proxies/live/apiproxy/policies/: AssignMessage.DefineAPIName.xml  AssignMessage.DefineResponse.xml  AssignMessage.GetEndpoints.xml  JS.AggregateEndpoints.xml  JS.DeleteServiceEntries.xml  JS.UpdateServiceEntries.xml  KVM.RetrieveServiceEntries.xml  KVM.StoreServiceEntries.xml  KeyValueMapOperations.GetSecureVariables.xml  KeyValueMapOperations.GetVariables.xml  VerifyApiKey.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/resources/: update-service-entries.js
proxies/live/apiproxy/resources/jsc/: aggregate-endpoints.js  delete-service-entries.js  update-service-entries.js
proxies/live/apiproxy/targets/: msd-target.xml
proxies/sandbox/apiproxy/: msd.xml
proxies/sandbox/apiproxy/policies/: KeyValueMapOperations.GetAsid.xml
scripts/: build_proxy.sh
specification/: monitoring-service-discovery.yaml
terraform/: main.tf
