[tool.poetry]
name = "monitoring-service-discovery-api"
version = "0.0.1-alpha"
description = "TODO"

license = "MIT"
package-mode = false
authors = [
    #TODO add authors
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/monitoring-service-discovery-api"

keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.9.25"
pyyaml = "^6.0.3"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.41"


[tool.poetry.group.dev.dependencies]
flake8 = "^3.7.9"
black = "^24.3.0"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.6"

[tool.poetry.scripts]
